<resources>
    <string name="app_name">RelativeLayout</string>
    <string name="click">click</string>
    <string name="hello_world">Hello World</string>
    <string name="press_the_button">Press the Button</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="one1">One</string>
    <string name="two2">Two</string>
    <string name="three3">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="this_is_relative_layout">This is Relative layout</string>
</resources>