<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/orangee"
        android:gravity="center"
        android:text="@string/one"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/a"
        android:background="@color/pinkeee"
        android:gravity="center"
        android:text="@string/two"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/b"
        android:background="@color/blueee"
        android:gravity="center"
        android:text="@string/three"
        android:textColor="@color/white"
        android:textSize="30sp" />
</RelativeLayout>